--- a/P1/index.html
+++ b/P1/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <script src="./main.js"></script>
-    
-</body>
+  </head>
+  <body>
+    <label>Nombre: </label>
+    <input type="text" id="nombre" />
+
+    <button type="button" onclick="getValueInput()">Aceptar</button>
+
+    <script src="./main.js">
+     
+    </script>
+  </body>
 </html>
