--- a/P2/index.html
+++ b/P2/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <label>Nombre: </label>
+    <input type="text" id="nombre" />
 
+    <button type="button" onclick="getValueInput()">Aceptar</button>
 
     <script src="./main.js">
      
