--- a/p17/index.html
+++ b/p17/index.html
@@ -26,6 +26,6 @@
       <div id="paper">📄</div>
       <div id="scissors">✂️</div>
     </div>
-    <div id="results" style="display:flex; justify-content: center;">.</div>
+    <div id="results" style="display:flex; justify-content: center;"></div>
   </body>
 </html>
